Fix the height of the slider so that it doesn't move the other content around when the screen is too narrow

--- a/assets/css/style-freenet.css
+++ b/assets/css/style-freenet.css
@@ -164,6 +164,7 @@ margin: 50px 20px;
 
 #carousel-slider {
 padding: 50px 20px 5px 50px;
+height: 20em;
 }
 
 #carousel-slider h3 {
